--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,15 @@
 <article class="product">
+
+  <% if product.quantity == 0 %>
+    <aside class="sold_out">
+      Sold Out
+    </aside>
+  <% end %>
+
+  <aside class="price">
+    <%= humanized_money_with_symbol product.price %>
+  </aside>
+
   <header>
     <%= link_to product do %>
       <%= image_tag product.image.thumb, alt: product.name %>
@@ -9,6 +20,9 @@
     <%= product.description %>
   </p>
   <footer class="actions">
+
+
+
     <%= link_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary', method: :put do %>
       <%= fa_icon "shopping-cart", text: 'Add' %>
     <% end %>
@@ -17,7 +31,4 @@
     <% end %>
   </footer>
 
-  <aside class="price">
-    <%= humanized_money_with_symbol product.price %>
-  </aside>
 </article>
