--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -42,6 +42,7 @@
       </table>
     </div>
     <h4>Thank you for your order!</h4>
+    <h5>Your Email: <%= current_user.email %></h5>
   </div>
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 </section>
